# predict_mlb_ai

./: .env.example  .gitignore  AI_SETUP.md  CLAUDE.md  DOCKER_GUIDE.md  DOCKER_SUCCESS.md  FIXED_ERRORS.md  GEMINI.md  README.md  README_MODERN.md  TROUBLESHOOTING.md  app.py  app_metrics.py  auto_update.py  compare.py  config.py  data_processor.py  data_quality_checker.py  data_status.py  docker-build.sh  docker-compose.dev.yml  docker-compose.yml  home.py  i18n.py  main.py  mlb.ipynb  mlb_2022_hitting_stats.csv  mlb_batter_stats_2000_2023.csv  player_analysis_ai.py  predict.py  pybaseball_processor.py  pyproject.toml  requirements.txt  search.py  start_backend.sh  start_frontend.sh  temp_fix.py  test_data_update.py  trend.py  trend.py.bak  (+2 more)
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: config.py
backend/app/models/: __init__.py  analysis.py  player.py
backend/app/services/: __init__.py  ai_service.py  data_service.py
backend/data/: mlb_batter_stats_2000_2023.csv
data/: mlb_batter_stats_2000_2023.csv  mlb_pitcher_stats_2000_2023.csv
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: usePlayerSearch.ts
frontend/src/pages/: AnalysisPage.tsx  ComparePage.tsx  HomePage.tsx  PlayerDetailPage.tsx  SearchPage.tsx
predict_mlb/components/: charts.py  ui_components.py
predict_mlb/config/: settings.py
predict_mlb/data/: data_manager.py
predict_mlb/i18n/: __init__.py
predict_mlb/models/: prediction_model.py  trend_analyzer.py
predict_mlb/pages/: home.py  search.py
predict_mlb/pipelines/: data_pipeline.py  prediction_pipeline.py
predict_mlb/utils/: error_handler.py  performance.py
predict_mlb/validators/: data_validators.py
(+18 files in other folders)
